fixed center align text

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -53,11 +53,17 @@ footer {
   background: linear-gradient(180deg, rgba(41, 41, 41, 1) 0%, #343434 21%, #4a4a4a 100%);
   padding: 5px;
 }
+footer p {
+  text-align: center;
+}
 .page-head {
   background: #333;
   color: white;
   margin: 20px;
   padding: 20px;
+  text-align: center;
+}
+.page-head p {
   text-align: center;
 }
 
